Archivo Readme formateado

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,27 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f1312f2] primer commit\n",
-      " 12 files changed, 0 insertions(+), 0 deletions(-)\n",
-      " create mode 100644 Lab1/.DS_Store\n",
-      " create mode 100644 Lab1/Laboratorio_1.pdf\n",
-      " create mode 100644 Lab1/imagen1/imagen1_salida_gray_azul.jpg\n",
-      " create mode 100644 Lab1/imagen1/imagen1_salida_gray_rojo.jpg\n",
-      " create mode 100644 Lab1/imagen1/imagen1_salida_gray_verde.jpg\n",
-      " create mode 100644 Lab1/imagen2/imagen2_salida_gray_azul.jpg\n",
-      " create mode 100644 Lab1/imagen2/imagen2_salida_gray_rojo.jpg\n",
-      " create mode 100644 Lab1/imagen2/imagen2_salida_gray_verde.jpg\n",
-      " create mode 100644 Lab1/imagen3/perro_salida_gray_azul.jpg\n",
-      " create mode 100644 Lab1/imagen3/perro_salida_gray_rojo.jpg\n",
-      " create mode 100644 Lab1/imagen3/perro_salida_gray_verde.jpg\n",
-      " create mode 100644 lab1.ipynb\n"
+      "[main 5c9d054] primer commit\n",
+      " 2 files changed, 108 insertions(+)\n"
      ]
     },
     {
@@ -30,13 +26,24 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   64a67d6..f1312f2  main -> main\n"
+      "   f1312f2..5c9d054  main -> main\n"
      ]
     }
    ],
    "source": [
     "! git add .\n",
     "! git commit -m \"primer commit\"\n",
+    "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"Archivo Readme formateado\"\n",
     "! git push"
    ]
   }
