--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -38,9 +38,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 49f9917] Archivo Readme formateado\n",
+      " 2 files changed, 63 insertions(+), 60 deletions(-)\n",
+      " rewrite README.md (95%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   5c9d054..49f9917  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "! git add .\n",
     "! git commit -m \"Archivo Readme formateado\"\n",
