Primer problema pruebas

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -72,6 +72,56 @@
     "! git commit -m \"Archivo Readme formateado\"\n",
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Problema1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main f853358] Primer problema\n",
+      " 2 files changed, 131 insertions(+), 2 deletions(-)\n",
+      " create mode 100644 Problema1.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   49f9917..f853358  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"Primer problema\"\n",
+    "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"Primer problema pruebas\"\n",
+    "! git push"
+   ]
   }
  ],
  "metadata": {
