--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -114,9 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Problema1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 678e532] Primer problema pruebas\n",
+      " 2 files changed, 154 insertions(+), 1 deletion(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   f853358..678e532  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "! git add .\n",
     "! git commit -m \"Primer problema pruebas\"\n",
