--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -114,15 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: LF will be replaced by CRLF in Problema1.ipynb.\n",
-      "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
       "The file will have its original line endings in your working directory\n"
      ]
@@ -131,8 +129,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 678e532] Primer problema pruebas\n",
-      " 2 files changed, 154 insertions(+), 1 deletion(-)\n"
+      "[main 4d1f5b6] Primer problema pruebas\n",
+      " 2 files changed, 31 insertions(+), 2 deletions(-)\n"
      ]
     },
     {
@@ -140,13 +138,24 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   f853358..678e532  main -> main\n"
+      "   678e532..4d1f5b6  main -> main\n"
      ]
     }
    ],
    "source": [
     "! git add .\n",
     "! git commit -m \"Primer problema pruebas\"\n",
+    "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"2do Problema\"\n",
     "! git push"
    ]
   }
