2do Problema readme

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -150,9 +150,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Problema1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Problema 2.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main a22b8c0] 2do Problema\n",
+      " 3 files changed, 409 insertions(+), 30 deletions(-)\n",
+      " create mode 100644 Problema 2.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   4d1f5b6..a22b8c0  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "! git add .\n",
     "! git commit -m \"2do Problema\"\n",
