--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -188,6 +188,42 @@
     "! git commit -m \"2do Problema\"\n",
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main b570858] 2do Problema readme\n",
+      " 2 files changed, 35 insertions(+), 3 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   a22b8c0..b570858  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"2do Problema readme\"\n",
+    "! git push"
+   ]
   }
  ],
  "metadata": {
