--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b570858] 2do Problema readme\n",
-      " 2 files changed, 35 insertions(+), 3 deletions(-)\n"
+      "[main a267218] 2do Problema readme\n",
+      " 2 files changed, 39 insertions(+), 1 deletion(-)\n"
      ]
     },
     {
@@ -215,13 +215,24 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   a22b8c0..b570858  main -> main\n"
+      "   b570858..a267218  main -> main\n"
      ]
     }
    ],
    "source": [
     "! git add .\n",
     "! git commit -m \"2do Problema readme\"\n",
+    "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"3do Problema\"\n",
     "! git push"
    ]
   }
