3do Problema README.md

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -227,12 +227,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Prolbema3.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main e2a16d0] 3do Problema\n",
+      " 9 files changed, 107 insertions(+), 4 deletions(-)\n",
+      " create mode 100644 Lab1/odish.jpg\n",
+      " create mode 100644 Lab1/out/blue_channel.jpg\n",
+      " create mode 100644 Lab1/out/green_channel.jpg\n",
+      " create mode 100644 Lab1/out/red_channel.jpg\n",
+      " create mode 100644 Prolbema3.ipynb\n",
+      " create mode 100644 blue_channel.jpg\n",
+      " create mode 100644 green_channel.jpg\n",
+      " create mode 100644 red_channel.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   a267218..e2a16d0  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"3do Problema\"\n",
+    "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "! git add .\n",
-    "! git commit -m \"3do Problema\"\n",
+    "! git commit -m \"3do Problema README.md\"\n",
     "! git push"
    ]
   }
