--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -273,9 +273,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 7528dec] 3do Problema README.md\n",
+      " 2 files changed, 48 insertions(+), 2 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   e2a16d0..7528dec  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "! git add .\n",
     "! git commit -m \"3do Problema README.md\"\n",
