4do Problema README.md

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -306,6 +306,45 @@
     "! git commit -m \"3do Problema README.md\"\n",
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Problema4.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main cf4774f] 4do Problema\n",
+      " 2 files changed, 148 insertions(+), 2 deletions(-)\n",
+      " create mode 100644 Problema4.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   7528dec..cf4774f  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"4do Problema\"\n",
+    "! git push"
+   ]
   }
  ],
  "metadata": {
