--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -345,6 +345,42 @@
     "! git commit -m \"4do Problema\"\n",
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 5cd67e8] 4do Problema README.md\n",
+      " 2 files changed, 41 insertions(+)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   cf4774f..5cd67e8  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"4do Problema README.md\"\n",
+    "! git push"
+   ]
   }
  ],
  "metadata": {
