--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -381,6 +381,47 @@
     "! git commit -m \"4do Problema README.md\"\n",
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Problema5.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 02620e1] 5to Problema\n",
+      " 4 files changed, 105 insertions(+)\n",
+      " create mode 100644 Problema5.ipynb\n",
+      " create mode 100644 hsv_color_space.gv\n",
+      " create mode 100644 hsv_graph.gv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
+      "   5cd67e8..02620e1  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git add .\n",
+    "! git commit -m \"5to Problema \"\n",
+    "! git push"
+   ]
   }
  ],
  "metadata": {
