5to Problema README.md

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +392,6 @@
      "output_type": "stream",
      "text": [
       "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
-      "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in Problema5.ipynb.\n",
       "The file will have its original line endings in your working directory\n"
      ]
     },
@@ -401,11 +399,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 02620e1] 5to Problema\n",
-      " 4 files changed, 105 insertions(+)\n",
-      " create mode 100644 Problema5.ipynb\n",
-      " create mode 100644 hsv_color_space.gv\n",
-      " create mode 100644 hsv_graph.gv\n"
+      "[main a35d92e] 5to Problema\n",
+      " 2 files changed, 44 insertions(+), 1 deletion(-)\n"
      ]
     },
     {
@@ -413,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   5cd67e8..02620e1  main -> main\n"
+      "   02620e1..a35d92e  main -> main\n"
      ]
     }
    ],
