4do Problema README.md

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -384,14 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: LF will be replaced by CRLF in Problema5.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Lab1/graphviz.svg.\n",
       "The file will have its original line endings in your working directory\n"
      ]
     },
@@ -399,8 +403,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a35d92e] 5to Problema\n",
-      " 2 files changed, 44 insertions(+), 1 deletion(-)\n"
+      "[main bd4b0b9] 5to Problema README.md\n",
+      " 4 files changed, 189 insertions(+), 9 deletions(-)\n",
+      " create mode 100644 Lab1/graphviz.svg\n"
      ]
     },
     {
@@ -408,13 +413,13 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   02620e1..a35d92e  main -> main\n"
+      "   a35d92e..bd4b0b9  main -> main\n"
      ]
     }
    ],
    "source": [
     "! git add .\n",
-    "! git commit -m \"5to Problema \"\n",
+    "! git commit -m \"5to Problema README.md \"\n",
     "! git push"
    ]
   }
