--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -348,13 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: LF will be replaced by CRLF in Problema4.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in lab1.ipynb.\n",
       "The file will have its original line endings in your working directory\n"
      ]
@@ -363,8 +365,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5cd67e8] 4do Problema README.md\n",
-      " 2 files changed, 41 insertions(+)\n"
+      "[main 097c632] 4do Problema README.md\n",
+      " 2 files changed, 32 insertions(+), 27 deletions(-)\n"
      ]
     },
     {
@@ -372,7 +374,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/ronaldbailey/Laboratorio-1---Introducci-n-al-Procesamiento-de-Im-genes-.git\n",
-      "   cf4774f..5cd67e8  main -> main\n"
+      "   bd4b0b9..097c632  main -> main\n"
      ]
     }
    ],
